[gd_scene load_steps=4 format=3 uid="uid://111vt7wxn7lx"]

[ext_resource type="Script" path="res://addons/ggs/editor/add_setting_window/add_setting_window.gd" id="1_338sp"]
[ext_resource type="Texture2D" uid="uid://dbervsl0o0ifw" path="res://addons/ggs/assets/search.svg" id="1_th7u7"]
[ext_resource type="Texture2D" uid="uid://bn0d5k8dd06qr" path="res://addons/ggs/assets/delete.svg" id="2_7ec7g"]

[node name="AddSettingWindow" type="ConfirmationDialog"]
title = "Add Setting from Template"
size = Vector2i(550, 460)
min_size = Vector2i(500, 450)
ok_button_text = "Add"
script = ExtResource("1_338sp")

[node name="MainCtnr" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 542.0
offset_bottom = 411.0

[node name="HBox" type="HBoxContainer" parent="MainCtnr"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftCtnr" type="VBoxContainer" parent="MainCtnr/HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.66

[node name="TopBar" type="HBoxContainer" parent="MainCtnr/HBox/LeftCtnr"]
layout_mode = 2

[node name="RecentLabel" type="Label" parent="MainCtnr/HBox/LeftCtnr/TopBar"]
layout_mode = 2
size_flags_vertical = 0
text = "Recent:"

[node name="ClearRecentBtn" type="Button" parent="MainCtnr/HBox/LeftCtnr/TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Clear Recent"
icon = ExtResource("2_7ec7g")
flat = true

[node name="RecentList" type="ItemList" parent="MainCtnr/HBox/LeftCtnr"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.66

[node name="RightCtnr" type="VBoxContainer" parent="MainCtnr/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TopBar" type="HBoxContainer" parent="MainCtnr/HBox/RightCtnr"]
layout_mode = 2
size_flags_vertical = 0

[node name="AllLabel" type="Label" parent="MainCtnr/HBox/RightCtnr/TopBar"]
layout_mode = 2
text = "All Items:"

[node name="FilterField" type="LineEdit" parent="MainCtnr/HBox/RightCtnr/TopBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
placeholder_text = "Filter Items..."
clear_button_enabled = true
right_icon = ExtResource("1_th7u7")

[node name="SettingList" type="ItemList" parent="MainCtnr/HBox/RightCtnr"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NameCtnr" type="HBoxContainer" parent="MainCtnr"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="NameLabel" type="Label" parent="MainCtnr/NameCtnr"]
layout_mode = 2
text = "Name:"

[node name="NameField" type="LineEdit" parent="MainCtnr/NameCtnr"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
